# ChangeLog for www-client/google-chrome
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome/ChangeLog,v 1.51 2011/11/11 15:15:09 floppym Exp $

*google-chrome-16.0.912.36_beta109393 (11 Nov 2011)

  11 Nov 2011; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-16.0.912.36_beta109393.ebuild,
  -google-chrome-16.0.912.32_beta108990.ebuild:
  Version bump for beta channel release.

*google-chrome-15.0.874.120_p108895 (10 Nov 2011)

  10 Nov 2011; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-15.0.874.120_p108895.ebuild,
  -google-chrome-15.0.874.106_p107270.ebuild:
  Version bump for stable channel release.

*google-chrome-16.0.912.32_beta108990 (09 Nov 2011)

  09 Nov 2011; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-16.0.912.32_beta108990.ebuild,
  -google-chrome-16.0.912.21_beta108057.ebuild:
  Version bump for beta channel release.

*google-chrome-17.0.932.0_alpha108826 (08 Nov 2011)

  08 Nov 2011; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-17.0.932.0_alpha108826.ebuild,
  -google-chrome-17.0.928.0_alpha108431.ebuild:
  Version bump for dev channel release.

*google-chrome-17.0.928.0_alpha108431 (04 Nov 2011)

  04 Nov 2011; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-17.0.928.0_alpha108431.ebuild,
  -google-chrome-16.0.912.21_alpha108057.ebuild:
  Version bump for dev channel release.

*google-chrome-16.0.912.21_beta108057 (03 Nov 2011)

  03 Nov 2011; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-16.0.912.21_beta108057.ebuild,
  -google-chrome-15.0.874.106_beta107270.ebuild:
  Version bump for beta channel release.

*google-chrome-16.0.912.21_alpha108057 (02 Nov 2011)

  02 Nov 2011; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-16.0.912.21_alpha108057.ebuild,
  -google-chrome-16.0.912.20_alpha107889.ebuild:
  Version bump for dev channel release.

*google-chrome-16.0.912.20_alpha107889 (01 Nov 2011)
