@@ -7,15 +7,15 @@ DIST google-chrome-stable_15.0.874.120-r108895_amd64.deb 24665320 RMD160 92ea674
 DIST google-chrome-stable_15.0.874.120-r108895_i386.deb 28813384 RMD160 c1a109b52acdd3ac88ff27a1e796f5190c428e0f SHA1 9c8a9eba12f8d7ec0e7aa95516c997ae9784f0e6 SHA256 0f6238bb52591aec25d42f90ede2272f8dd4089b5ab853a156c6dc5a6a9ce46e
 DIST google-chrome-unstable_17.0.932.0-r108826_amd64.deb 25210966 RMD160 37fb6f5a09753177a7169a2479629bbe83fc96e6 SHA1 31c020bc8bf7752d96993ef320a509bf0c96739d SHA256 ab543c1ae1b452e4f1e7bcb962985fb4fc5fc1776c5a747b0d76ab503ec7d36d
 DIST google-chrome-unstable_17.0.932.0-r108826_i386.deb 29277376 RMD160 abc89814fec6355013e8b5ab3d231c2b3c38d180 SHA1 d426166a70d4dc42acc18f7ebe3638851894c1c6 SHA256 29ea4d9daa034a6f74c89b6d01e337c0eff5165e4489f945c72e4bd16febe246
-EBUILD google-chrome-15.0.874.120_p108895.ebuild 4309 RMD160 66c917a35e763be8d301cd759cbf3be668920ccb SHA1 bb9a09b9a82517fd70fca001ae8073a0f7f1fe35 SHA256 8763106581ed978ee639bcf7e2b28457a8c88d3367c1b66721a28f480cd5e3ff
-EBUILD google-chrome-16.0.912.36_beta109393.ebuild 4311 RMD160 6a6673c2186b5132eb88696cb4b776b6e1a19e1a SHA1 a15d2914daaecdc825fa725671bbe58d40177daf SHA256 951ba821bb0c77998b3659e9a5776db307d1793c99695f942f5d1e0660fcd01b
-EBUILD google-chrome-17.0.932.0_alpha108826.ebuild 4311 RMD160 c3c1f3924712ef0220d28ffcf1e458f2c5f16f67 SHA1 a31bc78879f7ad9a4b933653bd6bd6460f56ff18 SHA256 83831b7b69d6e5842a31465c38d09a5fa15208b059073c4d5425c1253c414e0e
-MISC ChangeLog 12304 RMD160 a48bbea685411189e1044b50e4a4d25f97ce8ecb SHA1 e19ce2972d4db42176137a69dc7c63c512c386ca SHA256 006fc93e3d4f88280a3e502e73c5473b9632b11c67f12461589ad62a957be12f
+EBUILD google-chrome-15.0.874.120_p108895.ebuild 4342 RMD160 4feb9e3654b7bcecbed2354f2c2e6ac85fe163f3 SHA1 7f9f5d95ec0854853cd4dd03e0f9f7ac88282d74 SHA256 c6c190241468d584d245874a14f65666824c2ac192e929799027b311bf498f54
+EBUILD google-chrome-16.0.912.36_beta109393.ebuild 4344 RMD160 22b1b55f24fa5ec6cca3c6fdcbe812cd3ef5edb2 SHA1 cdda8ce10c50c8aea4881909a04742eabffed4cb SHA256 2abb6cdbefa14ec0c27969f1e8375ff30ae8e1ef9f51bed1e3225c22c4d00528
+EBUILD google-chrome-17.0.932.0_alpha108826.ebuild 4344 RMD160 f50b2a07255bb183e254a2bf9e04bcf439d29e5f SHA1 82ca05368e149a3c3b52bebb3fd49a0902a7b687 SHA256 42e97c9152cc5b884a4f53b0bea3ac2e82061e81e0c36332d1e1ae79d643d361
+MISC ChangeLog 12528 RMD160 ffac24b9067a7a40337165a8be84de453dd5f8d9 SHA1 867d75ad020ac534280f1225f58ff62a6088e857 SHA256 6c4b8946db65dcac951f1a9c68aff2339dae98cc45e87946a697c691b819ce5d
 MISC metadata.xml 510 RMD160 89172b66e00991d4e6ce045bcbb66d14145ac02a SHA1 f81450697c759948d8c8583aa1b6a095eb71bd05 SHA256 da7aab160a14cadf0b87a04ac7a92e4d90d86e51035ca3c3f96e1ffb3cbb1e83
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iF4EAREIAAYFAk69PAUACgkQC77qH+pIQ6SXvwD+KO1OO0olQZomL8gw1GLmNDjO
-eqRkc5Y4/d5E7lyklN0A/16zDB7ButPbEXT7U4SdP7CZHqs04qVWXy5iGt1YiuQx
-=9yhg
+iF4EAREIAAYFAk7AJCkACgkQaC/OocHi7JZPywEAkaXikYWl9qcnRiPhh41ajt/c
+yPfOciDMhaUUyhv6Y+0A/Rv1vRVR2ZY+Om7cP1Ra0zOu0RxfbAWFZCtHuw8Isquk
+=M3gp
 -----END PGP SIGNATURE-----
