@@ -1,6 +1,12 @@
 # ChangeLog for www-client/google-chrome
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome/ChangeLog,v 1.51 2011/11/11 15:15:09 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome/ChangeLog,v 1.52 2011/11/13 20:10:10 vapier Exp $
+
+  13 Nov 2011; Mike Frysinger <vapier@gentoo.org>
+  google-chrome-15.0.874.120_p108895.ebuild,
+  google-chrome-16.0.912.36_beta109393.ebuild,
+  google-chrome-17.0.932.0_alpha108826.ebuild:
+  Convert gcc[-nocxx] to gcc[cxx].
 
 *google-chrome-16.0.912.36_beta109393 (11 Nov 2011)
 
